--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -1,1 +1,25 @@
-
+workflows:
+  android-apk:
+    name: Build Android APK
+    max_build_duration: 60
+    environment:
+      flutter: stable
+      android:
+        ndk: latest
+      vars:
+        PACKAGE_NAME: "com.example.yourapp" # עדכן לשם החבילה שלך
+    triggering:
+      events:
+        - push
+        - pull_request
+      branch_patterns:
+        - pattern: main
+          include: true
+          source: true
+    scripts:
+      - name: Install dependencies
+        script: flutter pub get
+      - name: Build APK
+        script: flutter build apk --release
+    artifacts:
+      - build/app/outputs/flutter-apk/app-release.apk
