--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -4,8 +4,6 @@ workflows:
     max_build_duration: 60
     environment:
       flutter: stable
-      android:
-        ndk: latest
       vars:
         PACKAGE_NAME: "com.example.yourapp" # עדכן לשם החבילה שלך
     triggering:
@@ -18,8 +16,10 @@ workflows:
           source: true
     scripts:
       - name: Install dependencies
-        script: flutter pub get
+        script: |
+          flutter pub get
       - name: Build APK
-        script: flutter build apk --release
+        script: |
+          flutter build apk --release
     artifacts:
       - build/app/outputs/flutter-apk/app-release.apk
